# DevUtility

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README_CN.md  biome.json  index.html  lingui.config.ts  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: biomejs.yml  build-app.yml  cla-assistant.yml  crodwin.yml  crowdin.yml  deploy-web.yml  release-app.yml  test-rust.yml  update-asset.yml  upload.yml
crates/actions/: Cargo.toml
crates/actions/src/: lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/dev_utility/: Cargo.toml
crates/dev_utility/src/: main.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs
crates/tools/backslash_escapist_tool/: Cargo.toml
crates/tools/backslash_escapist_tool/src/: lib.rs  view.rs
crates/tools/base64_tool/: Cargo.toml
crates/tools/base64_tool/src/: lib.rs  view.rs
crates/tools/css_formatter_tool/: Cargo.toml
crates/tools/css_formatter_tool/src/: lib.rs  view.rs
crates/tools/hash_tool/: Cargo.toml
crates/tools/hash_tool/src/: lib.rs  view.rs
crates/tools/html_formatter_tool/: Cargo.toml
crates/tools/html_formatter_tool/src/: lib.rs  view.rs
crates/tools/id_tool/: Cargo.toml
crates/tools/id_tool/src/: lib.rs  view.rs
crates/tools/ip_calculator_tool/: Cargo.toml
crates/tools/ip_calculator_tool/src/: lib.rs  view.rs
crates/tools/ip_info_tool/: Cargo.toml
crates/tools/ip_info_tool/src/: lib.rs  view.rs
crates/tools/json_formatter_tool/: Cargo.toml
crates/tools/json_formatter_tool/src/: lib.rs  view.rs
crates/tools/jwt_tool/: Cargo.toml
crates/tools/jwt_tool/src/: lib.rs  view.rs
crates/tools/number_base_tool/: Cargo.toml
crates/tools/number_base_tool/src/: lib.rs  view.rs
crates/tools/rsa_tool/: Cargo.toml
crates/tools/rsa_tool/src/: lib.rs  view.rs
crates/tools/string_inspector_tool/: Cargo.toml
crates/tools/string_inspector_tool/src/: lib.rs  view.rs
crates/tools/totp_tool/: Cargo.toml
crates/tools/totp_tool/src/: lib.rs  view.rs
crates/tools/unix_time_tool/: Cargo.toml
crates/tools/unix_time_tool/src/: lib.rs  view.rs
crates/ui/: Cargo.toml
crates/ui/src/: colors.rs  error_box.rs  lib.rs  rows.rs  segmented_control.rs
crates/universal-function-macro/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
dev-utility/: Cargo.toml
dev-utility-gpui/: Cargo.toml
dev-utility-gpui/src/: app.rs  main.rs
dev-utility-gpui/src/layout/: input_output.rs  mod.rs  sidebar.rs
dev-utility-gpui/src/theme/: mod.rs
dev-utility-gpui/src/views/: mod.rs
dev-utility-gpui/src/views/codec/: base64.rs
dev-utility-gpui/src/views/generator/: id.rs
dev-utility-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
dev-utility-tauri/capabilities/: desktop.json
dev-utility-tauri/src/: lib.rs  main.rs  updater.rs
dev-utility-workers/: Cargo.toml  wrangler.toml
dev-utility-workers/src/: extactor.rs  lib.rs  response.rs
dev-utility-workers/src/routes/: codec.rs  hash.rs  mod.rs
dev-utility/src/: error.rs
dev-utility/src/core/: codec.rs  generator.rs  mod.rs
dev-utility/src/core/codec/: base64.rs  jwt.rs  mod.rs
dev-utility/src/core/converter/: backslash.rs  mod.rs  number_base.rs  string_inspector.rs
dev-utility/src/core/cryptography/: hash.rs
dev-utility/src/core/cryptography/oath/: hotp.rs  mod.rs  totp.rs
dev-utility/src/core/formatter/: html.rs  mod.rs
dev-utility/src/core/generator/: id.rs  mod.rs
dev-utility/src/core/hardware/: fido2.rs  mod.rs
dev-utility/src/core/network/: ip.rs  mod.rs
en/src/locales/en-US/: messages.po
scripts/: build-version.ts  bump-version.ts  copy-artifacts.ts  merge-license.ts
signatures/corporate/: README.md
signatures/version1/: cla.json
src/: app.tsx  contants.tsx  i18n.tsx  index.css  index.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  updates.rs
src-utility/: Cargo.toml
src-utility/src/: error.rs  lib.rs
src-utility/src/core/: codec.rs  formatter.rs  generator.rs  mod.rs
src-utility/src/core/cryptography/: hash.rs  mod.rs  rsa.rs
src-utility/src/core/cryptography/oath/: hotp.rs  mod.rs  totp.rs
src-utility/src/core/formatter/: css.rs  json.rs  mod.rs
src-utility/src/core/hardware/: hid.rs  mod.rs
src-utility/src/core/network/: ip.rs
src-utility/src/core/rsakey_decomposer/: derived_calculator.rs  key_parser.rs  model.rs  params_extract.rs
src-utility/tests/: web.rs
src/components/: codec-mode.tsx  error-render.tsx  meta.tsx
src/components/derived-ui/: callout.tsx
src/components/layout/: input-output.tsx  two-section.tsx
src/components/sidebar/: index.tsx  locale-switcher.tsx  search-form.tsx  theme-switcher.tsx
src/components/ui/: alert.tsx  badge.tsx  card.tsx  collapsible.tsx  input.tsx  label.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/hooks/: use-mobile.ts
src/lib/: copyboard.ts  utils.ts
src/locales/en-US/: messages.js  messages.po
src/locales/zh/: messages.po
src/locales/zh-CN/: messages.js  messages.po
src/pages/: settings.tsx  settings.tsx.bak
src/utilities/: invoke-wasm.ts  invoke.ts  invoke.wasm.ts  meta.ts  types.ts
src/utilities/ai/: tokenizer.tsx
src/utilities/codec/: base64.tsx
src/utilities/cryptography/fido/: fido2.tsx
src/utilities/cryptography/oath/: hotp.tsx  totp.tsx
src/utilities/cryptography/rsa/: analyzer.tsx  generator.tsx
src/utilities/formatter/: css.tsx  html.tsx  js.tsx  json.tsx
src/utilities/generators/: hash.tsx  id.tsx
src/utilities/network/: ip.tsx
zh-CN/src/locales/zh-CN/: messages.po
