[workspace]
members = [
    "crates/universal-function-macro",
    "dev-utility-workers",
    "src-tauri",
    "src-utility",
]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0"
tauri = "2"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
opt-level = "s"
