[workspace]
members = [
    "crates/universal-function-macro",
    "dev-utility-workers",
    "dev-utility-tauri",
    "dev-utility",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["AprilNEA  <github@sku.moe>"]
description = "⚡ Universal developer toolkit for software, hardware, and security professionals."
license-file = "LICENSE"
repository = "https://github.com/AprilNEA/DevUtility"

[workspace.dependencies]
serde_json = "1"
tauri = "2"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
opt-level = "s"

[profile.dev.package."*"]
opt-level = 1
debug = false