[workspace]
members = [
    "crates/universal-function-macro",
    "crates/assets",
    "crates/theme",
    "crates/settings",
    "crates/ui",
    "crates/workspace",
    "crates/actions",
    "crates/dev_utility",
    "crates/tools/base64_tool",
    "crates/tools/id_tool",
    "crates/tools/hash_tool",
    "crates/tools/jwt_tool",
    "crates/tools/json_formatter_tool",
    "crates/tools/css_formatter_tool",
    "crates/tools/number_base_tool",
    "crates/tools/unix_time_tool",
    "crates/tools/string_inspector_tool",
    "crates/tools/backslash_escapist_tool",
    "crates/tools/ip_calculator_tool",
    "crates/tools/rsa_tool",
    "crates/tools/totp_tool",
    "crates/tools/ip_info_tool",
    "crates/tools/html_formatter_tool",
    "dev-utility-workers",
    "dev-utility-tauri",
    "dev-utility-gpui",
    "dev-utility",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["AprilNEA  <github@sku.moe>"]
description = "⚡ Universal developer toolkit for software, hardware, and security professionals."
license-file = "LICENSE"
repository = "https://github.com/AprilNEA/DevUtility"

[workspace.dependencies]
gpui = "0.2"
gpui-component = "0.5"
serde_json = "1"
tauri = "2"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
opt-level = "s"

[profile.dev.package."*"]
opt-level = 1
debug = false