[package]
name = "dev-utility-gpui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "dev-utility-gpui"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets = "0.5"
serde.workspace = true
serde_json.workspace = true
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Shared core logic (no Tauri runtime)
dev-utility-core = { path = "../dev-utility", default-features = false }

# Shared UI primitives
ui = { path = "../crates/ui" }

# Per-tool crates (one crate per tool, Zed-style)
base64_tool = { path = "../crates/tools/base64_tool" }
id_tool = { path = "../crates/tools/id_tool" }
hash_tool = { path = "../crates/tools/hash_tool" }
jwt_tool = { path = "../crates/tools/jwt_tool" }
json_formatter_tool = { path = "../crates/tools/json_formatter_tool" }
css_formatter_tool = { path = "../crates/tools/css_formatter_tool" }
number_base_tool = { path = "../crates/tools/number_base_tool" }
unix_time_tool = { path = "../crates/tools/unix_time_tool" }
string_inspector_tool = { path = "../crates/tools/string_inspector_tool" }
backslash_escapist_tool = { path = "../crates/tools/backslash_escapist_tool" }
ip_calculator_tool = { path = "../crates/tools/ip_calculator_tool" }
rsa_tool = { path = "../crates/tools/rsa_tool" }
totp_tool = { path = "../crates/tools/totp_tool" }
ip_info_tool = { path = "../crates/tools/ip_info_tool" }
html_formatter_tool = { path = "../crates/tools/html_formatter_tool" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[package.metadata.bundle]
name = "DevUtility"
identifier = "dev.utility.gpui"
icon = ["bundle/AppIcon.icns"]
copyright = "Copyright 2024-2025 AprilNEA LLC. All rights reserved."
category = "public.app-category.developer-tools"
short_description = "Universal developer toolkit for software, hardware, and security professionals."
osx_minimum_system_version = "12.0"
