[package]
name = "dev-utility"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dev_utility_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["macos-private-api"] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
serde = { workspace = true }
serde_json = { workspace = true }
dev-utility-core = { path = "../dev-utility" }
thiserror = "2.0.12"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
