[package]
name = "dev-utility-core"
version = "0.1.10"
authors = ["AprilNEA  <github@sku.moe>"]
description = "⚡ Universal developer toolkit for software, hardware, and security professionals."
license-file = "../LICENSE"
repository = "https://github.com/AprilNEA/DevUtility"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
universal-function-macro = { path = "../crates/universal-function-macro" }

serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_json_path = "0.7.2"
thiserror = "2.0.10"
rayon = "1.7"

getrandom = { version = "0.3", features = ["wasm_js"] }

# Codec
base64 = "0.22.1"

# Cryptography
rsa = "0.9.8"
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }
pkcs1 = { version = "0.7", features = ["pem"] }

num-bigint = { version = "0.4.6", features = ["serde"] }
num-bigint-dig = { version = "0.8.4", features = ["serde"] }
num-integer = { version = "0.1.46" }

# Hash
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
md2 = "0.10"
md4 = "0.10"
md-5 = "0.10"
digest = "0.10"
hex = "0.4"
tiny-keccak = { version = "2.0", features = ["sha3"] }

# ID Generators
uuid-simd = "0.8.0"
uuid = { version = "1.17", features = [
  "v1",
  "v3",
  "v4",
  "v5",
  "v6",
  "v7",
  "v8",
  "serde",
  "js",
] }
ulid = "1.2.1"
nanoid = "0.4.0"

# Formatters
sonic-rs = "0.5.1"
serde_yml = "0.0.12"
basic-toml = "0.1.10"

html5ever = "0.35"
lightningcss = { version = "1.0.0-alpha.67", default-features = false, features = [
  "dashmap",
  "rayon",
] }

# OATH/TOTP/HOTP
base32 = "0.5"
hmac = "0.12"
urlencoding = "2.1"
markup5ever_rcdom = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tauri = { workspace = true }
jsonwebtoken = { version = "9.3.1" }

# Web-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde"] }
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
nanoid-wasm = "0.1.3"
tsify = { version = "0.5", features = ["js"] }
web-time = "1.1.0"
fastrand = { version = "2.3", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.34" }
