[package]
name = "ip_info_tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "IP address info lookup tool for DevUtility"
license-file.workspace = true
repository.workspace = true

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
ui = { path = "../../ui" }
