[package]
name = "unix_time_tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Unix timestamp converter tool for DevUtility"
license-file.workspace = true
repository.workspace = true

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ui = { path = "../../ui" }
